some abstracts added

--- a/index.html
+++ b/index.html
@@ -961,9 +961,14 @@
                             <td style="padding-left:8px">
                                 <b>Invited Talk</b>
                                 <br>
-                                <b>Title: TBD</b>
+                                <b>Title: General purpose visual recognition systems: beyond a single modality and a task</b>
                                 <a href="https://imisra.github.io/"><br>Ishan Misra (Meta)</a>
                                 <br>
+                                <b>Abstract</b> <a class="abstract-toggle">[Expand]</a>
+                                <div class="abstract-content">
+                                    Modern computer vision models are good at specialized tasks. Given the right architecture, right supervision, supervised learning can yield great specialist models. However, specialist models also have severe limitations — they can only do what they are trained for and require copious amounts of pristine supervision for it. In this talk, I’ll focus on two limitations: specialist models cannot work on tasks beyond what they saw training labels for, or on new types of visual data. I’ll present our recent efforts that design better architectures, training paradigms and loss functions to address these issues.
+                                    Our first line of work, called Omnivore, presents a single model that can operate on images, videos, and single-view 3D data. Omnivore leads to shared representations across visual modalities, without using paired input data. Omnivore can also be trained in a self-supervised manner. I'll conclude the talk with general purpose detection and segmentation models. We developed Detic, a simple way to train large-vocabulary detectors using image-level labs which leads to a 20,000+ class detector. We also proposed Mask2Former which is a single meta architecture for all types of image and video segmentation tasks.
+                                </div>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
                             </td>
@@ -978,9 +983,13 @@
                             <td style="padding-left:8px">
                                 <b>Invited Talk</b>
                                 <br>
-                                <b>Title: TBD</b>
+                                <b>Title: Learning Unsupervised Semantic Embeddings for Zero-Shot Image Classification</b>
                                 <a href="https://xianyongqin.github.io/"><br>Yongqin Xian (Google)</a>
                                 <br>
+                                <b>Abstract</b> <a class="abstract-toggle">[Expand]</a>
+                                <div class="abstract-content">
+                                    Despite the tremendous progress in zero-shot learning (ZSL), the majority of existing methods still rely on human-annotated attributes, which are difficult to annotate and scale. An unsupervised alternative is to represent each class using the word embedding associated with its semantic class name. However, word embeddings extracted from pre-trained language models do not necessarily capture visual similarities, resulting in poor zero-shot performance. In this talk, I will first present visually-grounded semantic embedding (VGSE) that enhances the word embeddings by mapping them into a latent space learned by image regions clustering. In the second part, I will introduce Image to Document Transformer (I2DFormer), a new transformer-based ZSL framework that learns unsupervised semantic embeddings from images and class-level online textual documents, e.g., Wikipedia. We empirically show that both methods significantly outperform previous unsupervised semantic embeddings on three public datasets and lead to highly interpretable results.
+                                </div>
                                 <!-- <a target="_blank" href="https://youtu.be/C3CAW8fW8A4">[Video]</a> -->
                                 <!-- <a target="_blank" href="https://drive.google.com/file/d/1TxqePHlM8Ofa_7aY16QtXQ84jomIkynK/view?usp=sharing">[Slides]</a> -->
                             </td>
