--- a/index.html
+++ b/index.html
@@ -246,11 +246,11 @@
                                 <br>Boston University</p>
                         </div>
                         <div class="large-2 columns">
-                            <a href="https://www1.icsi.berkeley.edu/~stellayu/"><img src="./static/eccv2022/img/speakers/stella_yu.jpeg" class="speaker_picture" style="width:150px; height:150px;">
+                            <a href="https://web.eecs.umich.edu/~stellayu/"><img src="./static/eccv2022/img/speakers/stella_yu.jpeg" class="speaker_picture" style="width:150px; height:150px;">
                                 <br><br>
                             </a>
                             <p style="font-size:12px; font-weight: 200;">Stella Yu
-                                <br>UC Berkley</p>
+                                <br>University of Michigan</p>
                         </div>
             
             
@@ -845,7 +845,7 @@
                             </td>
                             <td style="padding-left:8px">
                                 <b>Invited Talk</b>
-                                <a href="https://www1.icsi.berkeley.edu/~stellayu/"><br>Stella Yu (UC Berkley)</a>
+                                <a href="https://web.eecs.umich.edu/~stellayu/"><br>Stella Yu (University of Michigan) </a>
                                 <br>
                                 <b>Title: Learning Mid-Level Vision from Nothing but Data</b>
                                 <br>
