--- a/index.html
+++ b/index.html
@@ -1275,7 +1275,10 @@
                         </li> 
                         <li style="margin-left:30px">
                             <b>Domain-Compatible Synthetic Data Generation for Infrequent Objects Detection </b> Negin Sokhandan, Ninad D Kulkarni, Yash Shah, Suchitra Sathyanarayana
-                        </li>     
+                        </li>  
+                        <li style="margin-left:30px">
+                            <b>MS-CLIP]: Learning Visual Representation from Modality-Shared Contrastive Language-Image Pre-training </b> Haoxuan You*, Luowei Zhou*, Bin Xiao*, Noel Codella*, Yu Cheng, Ruochen Xu, Shih-Fu Chang, Lu Yuan
+                        </li>       
         
                         <br>
                         <!-- We accept abstract submissions to our workshop. All submissions shall have maximally 8 pages (excluding references) following the ECCV 2022 author guidelines. All submissions will be reviewed by the Program Committee on the basis of technical quality, relevance to scope of the conference, originality, significance, and clarity. Ther review process is double-blind, and the accepted papers are non-archived in ECCV proceeding. -->
