--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
         <div class="row">
             <p style="font-size:50px; color:black; font-weight: 50" align=center>Workshop on Computer Vision in the Wild
                 <br>
-                <span style="font-size:30px; color:gray; font-weight: 50" align=center>@ ECCV 2022, October 23, Virtual Meeting</span>
+                <span style="font-size:30px; color:gray; font-weight: 50" align=center>@ ECCV 2022, October 23 Virtual Meeting<br> </span>
+
+                 <span style="font-size:20px; color:gray; font-weight: 30" align=center>9:00am-6:00pm Israeli Time  ||  11:00pm (October 22)-8:00am Pacific Time  ||  2:00pm-11s:00pm Beijing Time</span>               
                 <!-- <br> -->
                 <!-- <br> -->
                 <!-- <span style="font-size:20px; color:black; font-weight: 400" align=center>Zoom and Gatherly links on ECCV 2022 website: <a target="_blank" href="https://www.eventscribe.net/2021/2021CVPR/agenda.asp?startdate=6/19/2021&enddate=6/19/2021&BCFO=M&pfp=Workshops&mode=&tn=&cpftwo=&custwo=&pta=/">Link</a> <br> Navigate to: Workshops -> Sat, October 23 -> Search for "Computer Vision in the Wild" workshop entry</b></span> -->
@@ -202,8 +204,8 @@
                 <img src="./static/img/challenge.png" height="900" width="500" style="display:block; margin:auto;" frameBorder="0">
             </div>
         </div> -->
-        <br>
-        <br>
+
+
 
         <div class="row">
             <h1 style="font-size:30px; color:grey; font-weight: 200">Overview</h1>
@@ -695,7 +697,7 @@
 
                                  - ICinW Parameter-Efficiency | 
                                 <a href="https://arxiv.org/abs/2205.03340">ProDA </a> |
-                                <a href="https://sincerass.github.io/">Yuning Lu (University of Science and Technology of China)</a>
+                                <a href="hhttps://github.com/lynlynlyn">Yuning Lu (University of Science and Technology of China)</a>
                                 <br>
 
                                  - ODinW Zero-Shot Track | 
