papers link added

--- a/index.html
+++ b/index.html
@@ -1286,34 +1286,34 @@ pairs has become a promising paradigm for open-vocabulary visual perception. In 
                         <br>
                     
                         <li style="margin-left:30px">
-                            <b>How well does CLIP understand texture? </b> Chenyun Wu, Subhransu Maji
+                            <b> <a href=./static/eccv2022/accepted_papers/texture_clip_abstract_eccv22.pdf>How well does CLIP understand texture? </b> Chenyun Wu, Subhransu Maji
                         </li>
                         <li style="margin-left:30px">
-                            <b>XMem: Long-Term Video Object Segmentation with an Atkinson-Shiffrin Memory Model </b> Ho Kei Cheng, Alexander Schwing
+                            <b> <a href=./static/eccv2022/accepted_papers/xmem.pdf>XMem: Long-Term Video Object Segmentation with an Atkinson-Shiffrin Memory Model </a> </b> Ho Kei Cheng, Alexander Schwing
                         </li>                
                         <li style="margin-left:30px">
-                            <b>Matryoshka Representations for Adaptive Deployment </b> Aniket Rege, Aditya Kusupati, Gantavya Bhatt, Matthew Wallingford, Aditya Sinha, Vivek Ramanujan, William Howard-Snyder, Kaifeng Chen, Sham Kakade, Prateek Jain, Ali Farhadi
+                            <b> <a href=./static/eccv2022/accepted_papers/MRL_ECCV.pdf>Matryoshka Representations for Adaptive Deployment </a></b> Aniket Rege, Aditya Kusupati, Gantavya Bhatt, Matthew Wallingford, Aditya Sinha, Vivek Ramanujan, William Howard-Snyder, Kaifeng Chen, Sham Kakade, Prateek Jain, Ali Farhadi
                         </li>
                         <li style="margin-left:30px">
-                            <b>Visual - Semantic Contrastive Alignment for Few-Shot Image Classification</b> Mohamed Afham Mohamed Aflal, Ranga Rodrigo
+                            <b> <a href=./static/eccv2022/accepted_papers/VS_Alignment___ECCVW.pdf>Visual - Semantic Contrastive Alignment for Few-Shot Image Classification </a></b> Mohamed Afham Mohamed Aflal, Ranga Rodrigo
                         </li>
                         <li style="margin-left:30px">
-                            <b>AUGCO: Augmentation Consistency-guided Self-training for Source-free Domain Adaptive Semantic Segmentation </b> Viraj Prabhu, Shivam Khare, Deeksha Kartik, Judy Hoffman
+                            <b> <a href=./static/eccv2022/accepted_papers/AUGCO_4pg.pdf>AUGCO: Augmentation Consistency-guided Self-training for Source-free Domain Adaptive Semantic Segmentation </a></b> Viraj Prabhu, Shivam Khare, Deeksha Kartik, Judy Hoffman
                         </li>                
                         <li style="margin-left:30px">
-                            <b>Unsupervised Selective Labeling for More Effective Semi-Supervised Learning </b> Xudong Wang, Long Lian, Stella X Yu
+                            <b> <a href=./static/eccv2022/accepted_papers/ECCV_2022_CV_in_the_Wild_Workshop_USL.pdf>Unsupervised Selective Labeling for More Effective Semi-Supervised Learning </a></b> Xudong Wang, Long Lian, Stella X Yu
                         </li>        
                         <li style="margin-left:30px">
-                            <b>OmDet: Language-Aware Object Detection with Large-scale Vision-Language Multi-dataset Pre-training </b> Tiancheng Zhao, Peng Liu, Xiaopeng Lu, Qianqian Zhang, Kyusong Lee, Tianqi Zhang, Mingwei Zhu, Haozhan Shen
+                            <b <a href=./static/eccv2022/accepted_papers/ELEVATER_Workshop_Paper.pdf>OmDet: Language-Aware Object Detection with Large-scale Vision-Language Multi-dataset Pre-training </a></b> Tiancheng Zhao, Peng Liu, Xiaopeng Lu, Qianqian Zhang, Kyusong Lee, Tianqi Zhang, Mingwei Zhu, Haozhan Shen
                         </li> 
                         <li style="margin-left:30px">
-                            <b>Diffusion Models for Outfit Rendering: Novel Conditioning Architectures for Subject-driven Generation </b> Vignesh Srinivasan, Nikolay Jetchev, Martin Heusel, Tofigh Naghibi
+                            <b> <a href=./static/eccv2022/accepted_papers/FashionDiffusion.pdf>Diffusion Models for Outfit Rendering: Novel Conditioning Architectures for Subject-driven Generation </a></b> Vignesh Srinivasan, Nikolay Jetchev, Martin Heusel, Tofigh Naghibi
                         </li> 
                         <li style="margin-left:30px">
-                            <b>Domain-Compatible Synthetic Data Generation for Infrequent Objects Detection </b> Negin Sokhandan, Ninad D Kulkarni, Yash Shah, Suchitra Sathyanarayana
+                            <b> <a href=./static/eccv2022/accepted_papers/ECCV_2022_Workshop_Domain_Compatible_Synthetic_Data_Generation.pdf>Domain-Compatible Synthetic Data Generation for Infrequent Objects Detection </a></b> Negin Sokhandan, Ninad D Kulkarni, Yash Shah, Suchitra Sathyanarayana
                         </li>  
                         <li style="margin-left:30px">
-                            <b>MS-CLIP: Learning Visual Representation from Modality-Shared Contrastive Language-Image Pre-training </b> Haoxuan You*, Luowei Zhou*, Bin Xiao*, Noel Codella*, Yu Cheng, Ruochen Xu, Shih-Fu Chang, Lu Yuan
+                            <b> <a href="https://arxiv.org/pdf/2207.12661.pdf">MS-CLIP: Learning Visual Representation from Modality-Shared Contrastive Language-Image Pre-training </a> </b> Haoxuan You*, Luowei Zhou*, Bin Xiao*, Noel Codella*, Yu Cheng, Ruochen Xu, Shih-Fu Chang, Lu Yuan
                         </li>       
         
                         <br>
