--- a/index.html
+++ b/index.html
@@ -1306,7 +1306,7 @@ pairs has become a promising paradigm for open-vocabulary visual perception. In 
                             <b> <a href=./static/eccv2022/accepted_papers/ECCV_2022_CV_in_the_Wild_Workshop_USL.pdf>Unsupervised Selective Labeling for More Effective Semi-Supervised Learning </a></b> Xudong Wang, Long Lian, Stella X Yu
                         </li>        
                         <li style="margin-left:30px">
-                            <b <a href=./static/eccv2022/accepted_papers/ELEVATER_Workshop_Paper.pdf>OmDet: Language-Aware Object Detection with Large-scale Vision-Language Multi-dataset Pre-training </a></b> Tiancheng Zhao, Peng Liu, Xiaopeng Lu, Qianqian Zhang, Kyusong Lee, Tianqi Zhang, Mingwei Zhu, Haozhan Shen
+                            <b> <a href=./static/eccv2022/accepted_papers/ELEVATER_Workshop_Paper.pdf>OmDet: Language-Aware Object Detection with Large-scale Vision-Language Multi-dataset Pre-training </a></b> Tiancheng Zhao, Peng Liu, Xiaopeng Lu, Qianqian Zhang, Kyusong Lee, Tianqi Zhang, Mingwei Zhu, Haozhan Shen
                         </li> 
                         <li style="margin-left:30px">
                             <b> <a href=./static/eccv2022/accepted_papers/FashionDiffusion.pdf>Diffusion Models for Outfit Rendering: Novel Conditioning Architectures for Subject-driven Generation </a></b> Vignesh Srinivasan, Nikolay Jetchev, Martin Heusel, Tofigh Naghibi
