--- a/index.html
+++ b/index.html
@@ -778,7 +778,7 @@
                                 <center> <b>2 PM - 2:30 PM IDT</b> <br><br>(4 AM - 4:30 AM PT)</center> 
                             </td>
                             <td width=300>
-                                <center><img src="./static/eccv2022/img/speakers/yongqin_xian.png"></center>
+                                <center><img src="./static/eccv2022/img/speakers/xian_yongqin.jpeg"></center>
                             </td>
                             <td style="padding-left:8px">
                                 <b>Invited Talk</b>
