--- a/index.html
+++ b/index.html
@@ -676,6 +676,7 @@
                                     <a href="https://eval.ai/web/challenges/challenge-page/1832/overview">ICinW</a> and 
                                     <a href="https://eval.ai/web/challenges/challenge-page/1839/overview">ODinW</a> </b> | 
                                 <a href="https://chunyuan.li/">Chunyuan Li (Microsoft Research)</a>
+                                <a href="./static/eccv2022/slides/chunyl_cvinw_challenge_october.pdf">[Slides]</a>
                                 <br>
                                 <br>
                                 <b>Winner team presentations (Decided by October 20, 2022)</b>
@@ -879,7 +880,7 @@
                             <td width=250>
                                 <center> <b>4:30 PM - 5 PM IDT</b> <br><br>(6:30 AM - 7 AM PT)</center> 
                             </td>
-                            <td width=300>s
+                            <td width=300>
                                 <center><img src="./static/eccv2022/img/speakers/kate_saenko.jpeg"></center>
                             </td>
                             <td style="padding-left:8px">
@@ -909,7 +910,8 @@
                                 <b>Title: Open-Vocabulary Visual Perception upon Frozen Vision and Language Models</b>
                                 <a href="https://ycui.me/"><br>Yin Cui (Google)</a>
                                 <br>
-                                <b>Abstract</b> <a class="abstract-toggle">[Expand]</a>
+                                <b>Abstract</b> <a class="abstract-toggle">[Expand]</a> 
+                                <a href="./static/eccv2022/slides/YinCui-ECCV_CVinW-20221023.pdf">[Slides]</a>
                                 <div class="abstract-content">
                                     Utilizing vision and language models (VLMs) pre-trained on large-scale image-text
 pairs has become a promising paradigm for open-vocabulary visual perception. In our recent explorations, we developed open-vocabulary models for detection based on distilling VLMs on existing detection data (ViLD), and for segmentation based on aligning image regions with image captions (OpenSeg). In this talk, I will focus on how to greatly simplify the paradigm by directly building upon frozen VLMs like CLIP with minimal modifications. In the first part, I will present our open-vocabulary detection model F-VLM that achieves state-of-the-art performance on the LVIS benchmark by only training a light-weight detector head. In the second part, I will show how we leverage motion and audio to help video generalize better to novel classes. Our model MOV encodes video, audio and flow with the same pre-trained CLIP’s vision encoder (frozen for video). We design an asymmetrical cross-attention module to aggregate multimodal information. MOV achieves state-of-the-art performance on UCF and HMDB, outperforming both traditional zero-shot methods and recent CLIP-based adaptation methods.
@@ -1328,7 +1330,7 @@ pairs has become a promising paradigm for open-vocabulary visual perception. In 
                         <br>
                     
                         <li style="margin-left:30px">
-                            <b> <a href=./static/eccv2022/accepted_papers/texture_clip_abstract_eccv22.pdf>How well does CLIP understand texture? </b> Chenyun Wu, Subhransu Maji
+                            <b> <a href=./static/eccv2022/accepted_papers/texture_clip_abstract_eccv22.pdf>How well does CLIP understand texture?  </a></b> Chenyun Wu, Subhransu Maji
                         </li>
                         <li style="margin-left:30px">
                             <b> <a href=./static/eccv2022/accepted_papers/xmem.pdf>XMem: Long-Term Video Object Segmentation with an Atkinson-Shiffrin Memory Model </a> </b> Ho Kei Cheng, Alexander Schwing
@@ -1962,10 +1964,21 @@ pairs has become a promising paradigm for open-vocabulary visual perception. In 
             </div>
 
             <div class="large-1 columns">
+                <a href="https://cse.buffalo.edu/~changyou/"><img src="./static/eccv2022/img/changyou_chen.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Changyou Chen
+                        <br>University at Buffalo, SUNY</p>                   
             </div>
 
             <div class="large-1 columns">
+                <a href="https://www.linkedin.com/in/yeahgoyixu"><img src="./static/eccv2022/img/yi_xu.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Yi Xu
+                        <br>Amazon</p>                   
             </div>
+            
             <div class="large-1 columns">
             </div>    
 
