--- a/index.html
+++ b/index.html
@@ -1980,6 +1980,11 @@ pairs has become a promising paradigm for open-vocabulary visual perception. In 
             </div>
             
             <div class="large-1 columns">
+                <a href="https://scholar.google.com/citations?user=BhysChMAAAAJ&hl=en"><img src="./static/eccv2022/img/haoxuan_you.jpeg" class="home_team_picture style=" width="75" height="75" ;>
+                        <br><br>
+                    </a>
+                    <p style="font-size:12px; font-weight: 200;">Haoxuan You
+                        <br>Columbia University</p>                  
             </div>    
 
 
