--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                                     <br>Google</p>
                         </div>
                         <div class="large-2 columns">
-                            <a href="https://xianyongqin.github.io/"><img src="./static/eccv2022/img/speakers/yongqin_xian.png"  class="speaker_picture" style="width:150px; height:150px;">
+                            <a href="https://xianyongqin.github.io/"><img src="./static/eccv2022/img/speakers/xian_yongqin.jpeg"  class="speaker_picture" style="width:150px; height:150px;">
                                 <br><br>
                             </a>
                             <p style="font-size:12px; font-weight: 200;">Yongqin Xian
