--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@ pairs has become a promising paradigm for open-vocabulary visual perception. In 
                             </td>
                             <td style="padding-left:8px">
                                 <b>Invited Talk</b>
-                                [<a href="https://youtu.be/hRf7dodGHcw">YouTube</a> | <a href="https://www.bilibili.com/video/BV1Zg411t75E">Bilibili</a>]
+                                [<a href="https://youtu.be/hRf7dodGHcw">YouTube</a> | <a href=" https://www.bilibili.com/video/BV1Kd4y1a7BM/?share_source=copy_web">Bilibili</a>]
                                 <a href="https://web.eecs.umich.edu/~stellayu/"><br>Stella Yu (University of Michigan) </a>
                                 <br>
                                 <b>Title: Learning Mid-Level Vision from Nothing but Data</b>
